@@ -1,7 +1,7 @@
 ############################################################################
 #
 # potfit -- The ITAP Force Matching Program
-# 	Copyright 2002-2010 
+# 	Copyright 2002-2010
 #
 # 	Institute for Theoretical and Applied Physics,
 # 	University of Stuttgart, D-70550 Stuttgart, Germany
@@ -120,7 +120,7 @@
 # x86_64-icc  	64bit Intel Compiler
 # x86_64-gcc    64bit GNU Compiler
 # i386-icc 	32bit Intel Compiler
-# i386-icc  	32bit GNU Compiler
+# i386-gcc  	32bit GNU Compiler
 SYSTEM 		= x86_64-icc
 
 # This is the directory where the potfit binary will be moved to
@@ -265,7 +265,7 @@ ifeq (i386-gcc,${SYSTEM})
   OPT_FLAGS	+= -O3 -march=native
   DEBUG_FLAGS	+= -g
   PROF_FLAGS	+= -g3 -pg
- 
+
 # Intel Math Kernel Library
 ifeq (,$(strip $(findstring acml,${MAKETARGET})))
   MKLPATH       = ${MKLDIR}/lib/32
@@ -533,7 +533,7 @@ ${MAKETARGET}: ${OBJECTS}
 	${CC} ${LIBS} ${LFLAGS_${PARALLEL}} -o $@ ${OBJECTS}
 ifneq (,${STRIP})
 ifeq (,$(findstring debug,${MAKETARGET}))
-	${STRIP} --strip-unneeded $@
+	${STRIP} --strip-unneeded -R .comment $@
 endif
 endif
 	${MV} $@ ${BIN_DIR}; rm -f $@
