@@ -1,3 +1,6 @@
+trunk-20100910
++ strip even more (comments)
+
 devel-20100908
 + final commit before next release
 + evolutionary algorithm now restarts if average==best
